--- a/kubernetes/talos-flux/apps/kube-system/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/kustomization.yaml
@@ -7,6 +7,6 @@ resources:
   - ./cilium/flux-sync.yaml
   - ./coredns/flux-sync.yaml
   - ./kubelet-csr-approver/flux-sync.yaml
-  - ./csi-driver-nfs/flux-sync.yaml
+  # - ./csi-driver-nfs/flux-sync.yaml
   - ./metrics-server/flux-sync.yaml
   - ./snapshot-controller/flux-sync.yaml
