--- a/kubernetes/talos-flux/flux/config/cluster-secrets.sops.yaml
+++ b/kubernetes/talos-flux/flux/config/cluster-secrets.sops.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: cluster-secrets
+    namespace: flux-system
     labels:
         kustomize.toolkit.fluxcd.io/prune: disabled
 stringData:
