Change PVCs to openebs-hostpath

--- a/kubernetes/talos-flux/apps/observability/kube-prometheus-stack/app/alertmanager-values.yaml
+++ b/kubernetes/talos-flux/apps/observability/kube-prometheus-stack/app/alertmanager-values.yaml
@@ -81,7 +81,7 @@ alertmanager:
     storage:
       volumeClaimTemplate:
         spec:
-          storageClassName: ceph-block
+          storageClassName: openebs-hostpath
           resources:
             requests:
               storage: 1Gi
