--- a/kubernetes/talos-flux/apps/observability/kube-prometheus-stack/app/prometheus-values.yaml
+++ b/kubernetes/talos-flux/apps/observability/kube-prometheus-stack/app/prometheus-values.yaml
@@ -64,7 +64,7 @@ prometheus:
     storageSpec:
       volumeClaimTemplate:
         spec:
-          storageClassName: ceph-block
+          storageClassName: openebs-hostpath
           resources:
             requests:
               storage: 10Gi
