--- a/kubernetes/talos-flux/apps/observability/uptime-kuma/flux-sync.yaml
+++ b/kubernetes/talos-flux/apps/observability/uptime-kuma/flux-sync.yaml
@@ -16,5 +16,5 @@ spec:
     name: home-ops
   wait: true
   dependsOn:
-    - name: apps-rook-ceph-cluster
+    # - name: apps-rook-ceph-cluster
     - name: apps-traefik
