--- a/kubernetes/talos-flux/apps/volsync/volsync/flux-sync.yaml
+++ b/kubernetes/talos-flux/apps/volsync/volsync/flux-sync.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   dependsOn:
     - name: apps-snapshot-controller
-    - name: apps-rook-ceph-cluster
+    # - name: apps-rook-ceph-cluster
     - name: apps-kube-prometheus-stack
   interval: 10m
   path: ./kubernetes/talos-flux/apps/volsync/volsync/app
