--- a/kubernetes/talos-flux/flux/config/cluster-secrets.sops.yaml
+++ b/kubernetes/talos-flux/flux/config/cluster-secrets.sops.yaml
@@ -1,32 +1,35 @@
----
 # yamllint disable
 apiVersion: v1
 kind: Secret
 metadata:
-    name: cluster-secrets
-    namespace: flux-system
-    labels:
-        kustomize.toolkit.fluxcd.io/prune: disabled
+  name: cluster-secrets
+  namespace: flux-system
+  labels:
+    kustomize.toolkit.fluxcd.io/prune: disabled
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:aCeQpI8/zakYoBLeZg==,iv:jGRP0le3BbX9bpJWtXvxN18M34A60HwmEj3AtVoSe2Q=,tag:YLDfyr7+KwwY47xXle3Ewg==,type:str]
-    SECRET_EMAIL: ENC[AES256_GCM,data:j1AJTNHd/pvQh9k6nNMVkCp6hJINtQ==,iv:3cyhamHvM+TmRHt9MXVS8Cz2zMLYsRtKQwnBRvXQ71c=,tag:Tl+PJ0kRm8zvvZJxGQBIqA==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:e18KQ5NDxeR85jwD7g==,iv:aSDzymbtn0hKvYLWcyXUoxvTvyoIaniARwIgL1CgPKs=,tag:kI4zjZsiLzc6i6LpvANYsA==,type:str]
+  SECRET_EMAIL: ENC[AES256_GCM,data:nKoPPRj7aonW5k8R1MCQ7B0QVc/16Q==,iv:3BdtWsxNi3XNt1CzgGSzYYXToF4+A39tBH86VO4t2VI=,tag:YT/vbkYhcrZUaDcB4qy6PA==,type:str]
+  SECRET_PUBLIC_SUBNET_IP4: ENC[AES256_GCM,data:Muo9RC98qoPFaLU3cA==,iv:QGgj3Ax+fvwXsOxACpvXv+OiK4Zyza0bMKKkG42vvQ8=,tag:ASpax3fAb4xjLVZb5Nad6g==,type:str]
+  SECRET_PUBLIC_SUBNET_IP6: ENC[AES256_GCM,data:oqn5Ny8KzPY6PjJ2XZSk4ccBaSl+IlofFA==,iv:P5uo11rEj/mZhfB72rMuHIS+XiqBL2dmXkW7jw0qghw=,tag:wv+TvMxFVBvZWAeF+ZArQg==,type:str]
+  SECRET_PUBLIC_IP4: ENC[AES256_GCM,data:5iyotBI8dXa07g==,iv:aTpzNhorw+LXEzddw8szz8hASSgemhAqIZzNUzIC+po=,tag:bzPVklNIrt87QAXt54zHkQ==,type:str]
+  SECRET_PUBLIC_IP6: ENC[AES256_GCM,data:d0IQR0zDtINImNbVR4Wk5k1sQ4dYwA==,iv:nqXjyOr6sXEWgfbmR0dWNsIXdU18xhqVR5mKTdKdM9M=,tag:3nPxT2akxXebPwnadYKkPg==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age:
-        - recipient: age15gfkljk0c50s57t86eu6gdzxenpqrn4frlmd5vwcv57w962w2cfswxz4ge
-          enc: |
-              -----BEGIN AGE ENCRYPTED FILE-----
-              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrMHluUTZtdXd4ekdXL2sz
-              ZE5PTjUzYnV5MzJGMEVIdytyY2xPUnNCZ0VzCmhpK2p1L2o2QW9qUTNEU3pzMUlW
-              UlpQd1lFM2Q1MXM0Ti8zZ1JCUjVyeFUKLS0tIHpGa2F4MFNndWtwTWVPQ1V5SWxO
-              OXI3T3FldlhSNld3azdRYVhZcmFKM00KSzfZvlb/l4uhl8yp/3JAZ1Jb8RRhv90q
-              LFr0eMWd2yvKcI0P35wDl2Fu8MeIwJt055+v1/0th06VD4K1MjOJwA==
-              -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-09-09T16:58:47Z"
-    mac: ENC[AES256_GCM,data:FVu4zc0w4bxRXwQvPsvCXDQIHNYeWiYSULWzRm5+7pCJ0P/9+o3X2MkbC5bZC1nnS8+/DEEh837reGW4X7rhoGA/RPbx6kdwSSWheIJJkMbeeplhPqjHc9PqtRj+uB1Bkv1ik7CgddJsBj9aX4E4pI7cCUuwKRogcDUDkYFHbuU=,iv:qOKxYZtutQ3ZG78Zmn+cmwHMgEizwOc4bpC8Af/AsZQ=,tag:hIvcUJISBR+sVgCyv0p6dw==,type:str]
-    pgp: []
-    encrypted_regex: ^(data|stringData)$
-    version: 3.9.0
+  kms: []
+  gcp_kms: []
+  azure_kv: []
+  hc_vault: []
+  age:
+    - recipient: age15gfkljk0c50s57t86eu6gdzxenpqrn4frlmd5vwcv57w962w2cfswxz4ge
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFc1JpNzM3SERJWEtYL3F0
+        V2NhTUkvSTY0SVdSckk0T1NwQStva00wSlhZCnFPaHRGaFlaLzN2cEZKRUVCdTM4
+        STZ4bUlMV1JPWXpOdTBJUGlUaG95UjgKLS0tIEg3anlKQlYwSHFtYXNYVUlBMERN
+        Yk4rRzgzS1g2T1BocEU2ZXlMeHdrM0UKcZZu1KhYW95TB4+UGVsMvFM/loKNiYg1
+        dRUi2RTPAxY591OdGgndyEmv9jFmT1rJwf/QY1ulG/9YubN8iwg0+A==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2024-09-15T11:57:02Z"
+  mac: ENC[AES256_GCM,data:x++SRCixAjJcKsyO+U5RFSvNTTvk1N840dirlwwkmElInYSTveqPigsT5WOFaU9kWPlzpQOcOzigpJdwlF7/ahxYcGsb3aauPBuETp54wlyLPBLqfBxYVAWEsmOvgpfq1YnM0DPaeLrIuaKVx8aofXhBsbysAGn88Qex8g/FplA=,iv:QvPLOgRq40oAT5dEPCGRMqpcqqjL1pc5UnZDlIm1H6Q=,tag:/hIZyP6PNle5jBKDmxHntg==,type:str]
+  pgp: []
+  encrypted_regex: ^(data|stringData)$
+  version: 3.9.0
