--- a/kubernetes/talos-flux/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/app/helm-release.yaml
@@ -30,8 +30,6 @@ spec:
     cluster:
       name: ${SETTING_CLUSTERNAME}
       id: 1
-    k8sServiceHost: 192.168.1.50
-    k8sServicePort: 6443
 
     autoDirectNodeRoutes: true
     bandwidthManager:
@@ -81,13 +79,6 @@ spec:
           enabled: true
           className: traefik
           annotations:
-            cert-manager.io/cluster-issuer: letsencrypt-production
-            kubernetes.io/tls-acme: "true"
-            traefik.ingress.kubernetes.io/router.middlewares: traefik-ingress-sso@kubernetescrd
-            traefik.ingress.kubernetes.io/router.entrypoints: websecure
-            traefik.ingress.kubernetes.io/affinity: "true"
-            traefik.ingress.kubernetes.io/router.tls: "true"
-            external-dns/opnsense: "true"
             hajimari.io/enable: "true"
             hajimari.io/appName: hubble
             hajimari.io/icon: simple-icons:cilium
@@ -97,19 +88,10 @@ spec:
             gethomepage.dev/icon: cilium
             gethomepage.dev/name: Hubble
             gethomepage.dev/weight: "10" # optional
-          hosts:
-            - &host hubble.techtales.io
-          tls:
-            - hosts:
-                - *host
-              secretName: hubble-tls
     ipam:
       mode: kubernetes
-    ipv4NativeRoutingCIDR: 10.244.0.0/16
-    kubeProxyReplacement: true
-    kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
     l2announcements:
-      enabled: true
+      enabled: false
       # leaseDuration: 120s
       # leaseRenewDeadline: 60s
       # leaseRetryPeriod: 1s
@@ -118,7 +100,7 @@ spec:
       mode: dsr
     localRedirectPolicy: true
     operator:
-      replicas: 3
+      replicas: 1
       rollOutPods: true
       prometheus:
         enabled: true
