--- a/archive/apps/devops/tekton/tasks/kustomization.yaml
+++ b/archive/apps/devops/tekton/tasks/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 namespace: devops
 resources:
   # - https://raw.githubusercontent.com/tektoncd/catalog/main/task/send-to-webhook-discord/0.1/send-to-webhook-discord.yaml
-  # - ./hello-world.yaml
-  # - ./goodbye.yaml
-  # - ./krr/rbac.yaml
-  # - ./krr/task.yaml
+  - ./hello-world.yaml
+  - ./goodbye.yaml
+  - ./krr/rbac.yaml
+  - ./krr/task.yaml
