--- a/kubernetes/kube-nas/bootstrap/cilium/kustomization.yaml
+++ b/kubernetes/kube-nas/bootstrap/cilium/kustomization.yaml
@@ -1,16 +1,17 @@
----
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 helmCharts:
-  - name: cilium
-    repo: https://helm.cilium.io/
-    version: 1.16.1
-    releaseName: cilium
-    namespace: kube-system
-    valuesFile: values.yaml
+- name: cilium
+  namespace: kube-system
+  releaseName: cilium
+  repo: https://helm.cilium.io/
+  valuesFile: values.yaml
+  version: 1.16.1
 commonAnnotations:
   meta.helm.sh/release-name: cilium
   meta.helm.sh/release-namespace: kube-system
-commonLabels:
-  app.kubernetes.io/managed-by: Helm
+labels:
+- includeSelectors: true
+  pairs:
+    app.kubernetes.io/managed-by: Helm
