--- a/kubernetes/talos-flux/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/app/helm-release.yaml
@@ -31,7 +31,7 @@ spec:
       name: ${SETTING_CLUSTERNAME}
       id: 1
 
-    autoDirectNodeRoutes: true
+    autoDirectNodeRoutes: false ## true creates error: "auto-direct-node-routes cannot be used with tunneling."
     bandwidthManager:
       enabled: true
       bbr: true
