--- a/kubernetes/talos-flux/apps/kube-system/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/kustomization.yaml
@@ -10,3 +10,4 @@ resources:
   # - ./csi-driver-nfs/flux-sync.yaml
   - ./metrics-server/flux-sync.yaml
   - ./snapshot-controller/flux-sync.yaml
+  - ./metallb/flux-sync.yaml
