--- a/kubernetes/talos-flux/apps/kube-system/cilium/flux-sync.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/flux-sync.yaml
@@ -23,26 +23,26 @@ spec:
   timeout: 5m
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
-#apiVersion: kustomize.toolkit.fluxcd.io/v1
-#kind: Kustomization
-#metadata:
-#  name: &app cilium-config
-#  namespace: flux-system
-#  labels:
-#    substitution.flux.home.arpa/enabled: "true"
-#spec:
-#  targetNamespace: kube-system
-#  commonMetadata:
-#    labels:
-#      app.kubernetes.io/name: *app
-#  dependsOn:
-#    - name: apps-cilium
-#  path: ./kubernetes/talos-flux/apps/kube-system/cilium/config
-#  prune: false # do not remove our network stack by accident!
-#  sourceRef:
-#    kind: GitRepository
-#    name: home-ops
-#  wait: false
-#  interval: 30m
-#  retryInterval: 1m
-#  timeout: 5m
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app cilium-config
+  namespace: flux-system
+  labels:
+    substitution.flux.home.arpa/enabled: "true"
+spec:
+  targetNamespace: kube-system
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  dependsOn:
+    - name: apps-cilium
+  path: ./kubernetes/talos-flux/apps/kube-system/cilium/config
+  prune: false # do not remove our network stack by accident!
+  sourceRef:
+    kind: GitRepository
+    name: home-ops
+  wait: false
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
