--- a/kubernetes/talos-flux/bootstrap/cilium/values.yaml
+++ b/kubernetes/talos-flux/bootstrap/cilium/values.yaml
@@ -242,7 +242,7 @@ securityContext:
   # -- User to run the pod with
   # runAsUser: 0
   # -- Run the pod with elevated privileges
-  privileged: true
+  privileged: false
   # -- SELinux options for the `cilium-agent` and init containers
   seLinuxOptions:
     level: 's0'
@@ -264,7 +264,8 @@ securityContext:
       # Used since cilium monitor uses mmap
       - IPC_LOCK
       # Used in iptables. Consider removing once we are iptables-free
-      - SYS_MODULE
+      # As Talos does not allow loading Kernel modules by Kubernetes workloads, SYS_MODULE needs to be dropped from the Cilium default capability list.
+      # - SYS_MODULE
       # Needed to switch network namespaces (used for health endpoint, socket-LB).
       # We need it for now but might not need it for >= 5.11 specially
       # for the 'SYS_RESOURCE'.
@@ -308,7 +309,7 @@ securityContext:
       # Used since cilium modifies routing tables, etc...
       - NET_ADMIN
       # Used in iptables. Consider removing once we are iptables-free
-      - SYS_MODULE
+      # - SYS_MODULE
       # We need it for now but might not need it for >= 5.11 specially
       # for the 'SYS_RESOURCE'.
       # In >= 5.8 there's already BPF and PERMON capabilities
@@ -1308,7 +1309,7 @@ hubble:
     # -- Enable Hubble Relay (requires hubble.enabled=true)
     enabled: false
     # -- Roll out Hubble Relay pods automatically when configmap is updated.
-    rollOutPods: false
+    rollOutPods: true
     # -- Hubble-relay container image.
     image:
       # @schema
@@ -2740,7 +2741,7 @@ nodeinit:
     capabilities:
       add:
         # Used in iptables. Consider removing once we are iptables-free
-        - SYS_MODULE
+        # - SYS_MODULE
         # Used for nsenter
         - NET_ADMIN
         - SYS_ADMIN
