Metallb: fix configmap destination update pre-commit

--- a/kubernetes/talos-flux/apps/kube-system/metallb/app/values.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/metallb/app/values.yaml
@@ -1,9 +1,10 @@
 # configmap-metallb-helm-chart-value-overrides.yaml
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: metallb-helm-chart-value-overrides
-  namespace: flux-system
+  namespace: metallb-system
 data:
   values.yaml: |-
     # Default values for metallb.
