--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
           - --notitle
 
   - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.94.1
+    rev: v1.96.1
     hooks:
       - id: terraform_docs
         args:
@@ -82,7 +82,7 @@ repos:
       - id: forbid-bidi-controls
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.41.0
+    rev: v0.42.0
     hooks:
       - id: markdownlint-fix
         args:
@@ -90,7 +90,7 @@ repos:
           - .markdownlint.yaml
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.1.0
+    rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
         args:
@@ -111,12 +111,12 @@ repos:
           )$()
 
   - repo: https://github.com/zricethezav/gitleaks
-    rev: v8.18.4
+    rev: v8.19.2
     hooks:
       - id: gitleaks
 
   - repo: https://github.com/tarioch/flux-check-hook
-    rev: v0.4.0
+    rev: v0.5.0
     hooks:
       - id: check-flux-helm-values
         exclude: |
