--- a/kubernetes/talos-flux/apps/kube-system/metallb/flux-sync.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/metallb/flux-sync.yaml
@@ -19,6 +19,15 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 5m
+  healthChecks:
+    - apiVersion: apps/v1
+      kind: Deployment
+      name: metallb-controller
+      namespace: metallb-system
+    - apiVersion: apps/v1
+      kind: Daemonset
+      name: metallb-speaker
+      namespace: metallb-system
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
