--- a/kubernetes/talos-flux/apps/kube-system/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/kustomization.yaml
@@ -4,9 +4,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-  - ./cilium/flux-sync.yaml
   - ./kubelet-csr-approver/flux-sync.yaml
   - ./metrics-server/flux-sync.yaml
   - ./snapshot-controller/flux-sync.yaml
-  - ./metallb/flux-sync.yaml
+  # - ./metallb/flux-sync.yaml
   - ./gateway/flux-sync.yaml
