--- a/kubernetes/talos-flux/apps/kube-system/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/kustomization.yaml
@@ -9,3 +9,4 @@ resources:
   - ./snapshot-controller/flux-sync.yaml
   # - ./metallb/flux-sync.yaml
   - ./gateway/flux-sync.yaml
+  - ./cilium/flux-sync.yaml
