--- a/kubernetes/talos-flux/apps/kube-system/cilium/config/cilium-host-policy.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/config/cilium-host-policy.yaml
@@ -2,31 +2,25 @@
 apiVersion: "cilium.io/v2"
 kind: CiliumClusterwideNetworkPolicy
 metadata:
-  name: "lock-down-ingress-worker-node"
+  name: "allow-world-to-host"
 spec:
-  description: "Allow a minimum set of required ports on ingress of worker nodes"
+  description: "Allow ports for world access"
   nodeSelector:
     matchLabels:
       topology.kubernetes.io/zone: public
   ingress:
   - fromEntities:
-    - remote-node
-    - health
+    - world
   - toPorts:
     - ports:
-      - port: "6443"
+      - port: "6443" # kubernetes API
         protocol: TCP
-      - port: "2379"
+        # Talos Ports: https://www.talos.dev/v1.8/learn-more/talos-network-connectivity/
+      - port: "50000" # talos
         protocol: TCP
-      - port: "4240"
+      - port: "50002" # talos
         protocol: TCP
-      - port: "8472"
-        protocol: UDP
-      - port: "50000"
+      - port: "80" # http
         protocol: TCP
-      - port: "50002"
-        protocol: TCP
-      - port: "80"
-        protocol: TCP
-      - port: "443"
+      - port: "443" # https
         protocol: TCP
