--- a/kubernetes/talos-flux/apps/kube-system/cilium/config/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/config/kustomization.yaml
@@ -4,5 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./cilium-host-policy.yaml
+  - ./cilium-host-ingress-policy.yaml
   # - ./cilium-l2-announcement-policy.yaml
   # - ./cilium-load-balancer-ip-pool.yaml
