--- a/kubernetes/talos-flux/apps/kube-system/cilium/app/values.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/app/values.yaml
@@ -981,7 +981,7 @@ eni:
   instanceTagsFilter: []
 externalIPs:
   # -- Enable ExternalIPs service support.
-  enabled: false
+  enabled: true
 # fragmentTracking enables IPv4 fragment tracking support in the datapath.
 # fragmentTracking: true
 gke:
@@ -2026,7 +2026,7 @@ loadBalancer:
 # -- Configure N-S k8s service loadbalancing
 nodePort:
   # -- Enable the Cilium NodePort service implementation.
-  enabled: false
+  enabled: true
   # -- Port range to use for NodePort services.
   # range: "30000,32767"
 
@@ -2072,7 +2072,7 @@ pprof:
   port: 6060
 # -- Configure prometheus metrics on the configured port at /metrics
 prometheus:
-  enabled: false
+  enabled: true
   port: 9962
   serviceMonitor:
     # -- Enable service monitors.
@@ -2138,7 +2138,7 @@ envoy:
   # -- Enable Envoy Proxy in standalone DaemonSet.
   # This field is enabled by default for new installation.
   # @default -- `true` for new installation
-  enabled: ~
+  enabled: true
   # -- (int)
   # Set Envoy'--base-id' to use when allocating shared memory regions.
   # Only needs to be changed if multiple Envoy instances will run on the same node and may have conflicts. Supported values: 0 - 4294967295. Defaults to '0'
@@ -2205,7 +2205,7 @@ envoy:
       # @schema
       maxUnavailable: 2
   # -- Roll out cilium envoy pods automatically when configmap is updated.
-  rollOutPods: false
+  rollOutPods: true
   # -- Annotations to be added to all top-level cilium-envoy objects (resources under templates/cilium-envoy)
   annotations: {}
   # -- Security Context for cilium-envoy pods.
