--- a/kubernetes/talos-flux/apps/kube-system/cilium/config/cilium-l2-announcement-policy.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/config/cilium-l2-announcement-policy.yaml
@@ -8,6 +8,7 @@ spec:
   loadBalancerIPs: true
   interfaces:
     - ^eth[0-9]+
+    - ^enx.+
   nodeSelector:
     matchLabels:
       kubernetes.io/os: linux
