--- a/kubernetes/talos-flux/apps/kube-system/cilium/config/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/config/kustomization.yaml
@@ -5,5 +5,5 @@ kind: Kustomization
 resources:
   - ./cilium-host-policy.yaml
   - ./cilium-host-ingress-policy.yaml
-  # - ./cilium-l2-announcement-policy.yaml
-  # - ./cilium-load-balancer-ip-pool.yaml
+  - ./cilium-l2-announcement-policy.yaml
+  - ./cilium-load-balancer-ip-pool.yaml
