--- a/kubernetes/talos-flux/flux/repositories/home-ops.yaml
+++ b/kubernetes/talos-flux/flux/repositories/home-ops.yaml
@@ -15,6 +15,6 @@ spec:
   ref:
     branch: main
   secretRef:
-    name: flux-system
+    name: ssh-credentials
   timeout: 60s
-  url: https://github.com/icaruseffect/home-ops.git
+  url: ssh://git@github.com/icaruseffect/home-ops.git
