--- a/kubernetes/talos-flux/bootstrap/cilium/values.yaml
+++ b/kubernetes/talos-flux/bootstrap/cilium/values.yaml
@@ -13,7 +13,7 @@
 upgradeCompatibility: null
 debug:
   # -- Enable debug logging
-  enabled: false
+  enabled: true
   # @schema
   # type: [null, string]
   # @schema
@@ -41,12 +41,12 @@ imagePullSecrets: []
 # @default -- `"~/.kube/config"`
 kubeConfigPath: ""
 # -- (string) Kubernetes service host - use "auto" for automatic lookup from the cluster-info ConfigMap (kubeadm-based clusters only)
-k8sServiceHost: "::1"
+k8sServiceHost: "localhost"
 # @schema
 # type: [string, integer]
 # @schema
 # -- (string) Kubernetes service port
-k8sServicePort: "7445"
+k8sServicePort: "6443"
 # -- Configure the client side rate limit for the agent and operator
 #
 # If the amount of requests to the Kubernetes API server exceeds the configured
@@ -262,7 +262,7 @@ securityContext:
       # Used since cilium monitor uses mmap
       - IPC_LOCK
       # Used in iptables. Consider removing once we are iptables-free
-      - SYS_MODULE
+      # - SYS_MODULE
       # Needed to switch network namespaces (used for health endpoint, socket-LB).
       # We need it for now but might not need it for >= 5.11 specially
       # for the 'SYS_RESOURCE'.
@@ -306,7 +306,7 @@ securityContext:
       # Used since cilium modifies routing tables, etc...
       - NET_ADMIN
       # Used in iptables. Consider removing once we are iptables-free
-      - SYS_MODULE
+      # - SYS_MODULE
       # We need it for now but might not need it for >= 5.11 specially
       # for the 'SYS_RESOURCE'.
       # In >= 5.8 there's already BPF and PERMON capabilities
@@ -1861,7 +1861,7 @@ k8s:
   requireIPv4PodCIDR: true
   # -- requireIPv6PodCIDR enables waiting for Kubernetes to provide the PodCIDR
   # range via the Kubernetes node resource
-  requireIPv6PodCIDR: false
+  requireIPv6PodCIDR: true
 # -- Keep the deprecated selector labels when deploying Cilium DaemonSet.
 keepDeprecatedLabels: false
 # -- Keep the deprecated probes when deploying Cilium DaemonSet
@@ -2748,7 +2748,7 @@ nodeinit:
     capabilities:
       add:
         # Used in iptables. Consider removing once we are iptables-free
-        - SYS_MODULE
+        # - SYS_MODULE
         # Used for nsenter
         - NET_ADMIN
         - SYS_ADMIN
