--- a/kubernetes/talos-flux/apps/kube-system/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/kustomization.yaml
@@ -8,5 +8,5 @@ resources:
   - ./metrics-server/flux-sync.yaml
   - ./snapshot-controller/flux-sync.yaml
   # - ./metallb/flux-sync.yaml
-  - ./gateway/flux-sync.yaml
+  # - ./gateway/flux-sync.yaml
   - ./cilium/flux-sync.yaml
