--- a/kubernetes/talos-flux/apps/openebs-system/openebs/app/helm-release.yaml
+++ b/kubernetes/talos-flux/apps/openebs-system/openebs/app/helm-release.yaml
@@ -42,7 +42,7 @@ spec:
     lvm-localpv:
       enabled: false
     mayastor:
-      enabled: true
+      enabled: false
     engines:
       local:
         lvm:
@@ -51,4 +51,4 @@ spec:
           enabled: false
       replicated:
         mayastor:
-          enabled: true
+          enabled: false
