--- a/kubernetes/talos-flux/apps/kube-system/cilium/app/values.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/app/values.yaml
@@ -154,7 +154,7 @@ image:
   # @schema
   override: ~
   repository: "quay.io/cilium/cilium"
-  tag: "v1.16.1"
+  tag: "v1.16.3"
   pullPolicy: "IfNotPresent"
   # cilium-digest
   digest: ""
@@ -747,7 +747,7 @@ envoyConfig:
 ingressController:
   # -- Enable cilium ingress controller
   # This will automatically set enable-envoy-config as well.
-  enabled: false
+  enabled: true
   # -- Set cilium ingress controller to be the default ingress controller
   # This will let cilium ingress controller route entries without ingress class set
   default: true
@@ -799,7 +799,7 @@ ingressController:
     # -- Annotations to be added for the shared LB service
     annotations: {}
     # -- Service type for the shared LB service
-    type: NodePort
+    type: LoadBalancer
     # @schema
     # type: [null, integer]
     # @schema
@@ -825,7 +825,7 @@ ingressController:
     # @schema
     # -- Configure if node port allocation is required for LB service
     # ref: https://kubernetes.io/docs/concepts/services-networking/service/#load-balancer-nodeport-allocation
-    allocateLoadBalancerNodePorts: false
+    allocateLoadBalancerNodePorts: ~
     # -- Control how traffic from external sources is routed to the LoadBalancer Kubernetes Service for Cilium Ingress in shared mode.
     # Valid values are "Cluster" and "Local".
     # ref: https://kubernetes.io/docs/reference/networking/virtual-ips/#external-traffic-policy
@@ -835,7 +835,7 @@ ingressController:
     # -- Configure whether the Envoy listeners should be exposed on the host network.
     enabled: false
     # -- Configure a specific port on the host network that gets used for the shared listener.
-    sharedListenerPort: ~
+    sharedListenerPort: 8080
     # Specify the nodes where the Ingress listeners should be exposed
     nodes:
       # -- Specify the labels of the nodes where the Ingress listeners should be exposed
@@ -843,9 +843,7 @@ ingressController:
       # matchLabels:
       #   kubernetes.io/os: linux
       #   kubernetes.io/hostname: kind-worker
-      matchLabels:
-        # topology.kubernetes.io/zone: public
-
+      matchLabels: {}
 gatewayAPI:
   # -- Enable support for Gateway API in cilium
   # This will automatically set enable-envoy-config as well.
@@ -929,8 +927,6 @@ encryption:
     # -- Enable IPsec encrypted overlay
     encryptedOverlay: false
   wireguard:
-    # -- Enables the fallback to the user-space implementation (deprecated).
-    userspaceFallback: false
     # -- Controls WireGuard PersistentKeepalive option. Set 0s to disable.
     persistentKeepalive: 0s
 endpointHealthChecking:
@@ -1151,12 +1147,12 @@ hubble:
     # grafana can import dashboards based on the label and value
     # ref: https://github.com/grafana/helm-charts/tree/main/charts/grafana#sidecar-for-dashboards
     dashboards:
-      enabled: false
+      enabled: true
       label: grafana_dashboard
       # @schema
       # type: [null, string]
       # @schema
-      namespace: ~
+      namespace: observability
       labelValue: "1"
       annotations: {}
   # -- Unix domain socket path to listen to when Hubble is enabled.
@@ -1323,7 +1319,7 @@ hubble:
       # @schema
       override: ~
       repository: "quay.io/cilium/hubble-relay"
-      tag: "v1.16.1"
+      tag: "v1.16.3"
       # hubble-relay-digest
       digest: ""
       useDigest: false
@@ -2173,9 +2169,9 @@ envoy:
     # @schema
     override: ~
     repository: "quay.io/cilium/cilium-envoy"
-    tag: "v1.29.7-39a2a56bbd5b3a591f69dbca51d3e30ef97e0e51"
+    tag: "v1.29.9-1728346947-0d05e48bfbb8c4737ec40d5781d970a550ed2bbd"
     pullPolicy: "IfNotPresent"
-    digest: "sha256:bd5ff8c66716080028f414ec1cb4f7dc66f40d2fb5a009fff187f4a9b90b566b"
+    digest: "sha256:42614a44e508f70d03a04470df5f61e3cffd22462471a0be0544cf116f2c50ba"
     useDigest: true
   # -- Additional containers added to the cilium Envoy DaemonSet.
   extraContainers: []
@@ -2490,7 +2486,7 @@ operator:
     # @schema
     override: ~
     repository: "quay.io/cilium/operator"
-    tag: "v1.16.1"
+    tag: "v1.16.3"
     # operator-generic-digest
     genericDigest: ""
     # operator-azure-digest
@@ -2775,7 +2771,7 @@ preflight:
     # @schema
     override: ~
     repository: "quay.io/cilium/cilium"
-    tag: "v1.16.1"
+    tag: "v1.16.3"
     # cilium-digest
     digest: ""
     useDigest: false
@@ -2924,7 +2920,7 @@ clustermesh:
       # @schema
       override: ~
       repository: "quay.io/cilium/clustermesh-apiserver"
-      tag: "v1.16.1"
+      tag: "v1.16.3"
       # clustermesh-apiserver-digest
       digest: ""
       useDigest: false
@@ -3426,7 +3422,7 @@ authentication:
           override: ~
           repository: "docker.io/library/busybox"
           tag: "1.36.1"
-          digest: "sha256:9ae97d36d26566ff84e8893c64a6dc4fe8ca6d1144bf5b87b2b85a32def253c7"
+          digest: "sha256:c230832bd3b0be59a6c47ed64294f9ce71e91b327957920b6929a0caa8353140"
           useDigest: true
           pullPolicy: "IfNotPresent"
         # SPIRE agent configuration
