--- a/kubernetes/base/flux/repositories/git/home-ops.yaml
+++ b/kubernetes/base/flux/repositories/git/home-ops.yaml
@@ -12,7 +12,7 @@ spec:
   ref:
     branch: main
   secretRef:
-    name: flux-system
+    name: ssh-credentials
   ignore: |
     # exclude all
     /*
